# drone-master

./: .gitmodules  CMakeLists.txt  app.info
src/: Application.cc  Application.h  ApplicationInfo.cc  ApplicationInfo.h  CMakeLists.txt  main.cc
src/ConnectionManager/: CMakeLists.txt  Server.cc  Server.h
src/NetworkManager/: CMakeLists.txt  NetworkManager.h
src/UI/: CMakeLists.txt  UserInterface.cc  UserInterface.h  WindowManager.cc  WindowManager.h
src/asio/: CMakeLists.txt  asio.cc
src/logger/: CMakeLists.txt  logger.cc  logger.h
src/websocket/: CMakeLists.txt  Client.cc  Client.h
